# fazer

./: Cargo.toml  README.md
configs/: regular.toml  small.toml  tiny.toml
src/: cli.rs  config.rs  eval.rs  fuzz.rs  gen.rs  generate.rs  main.rs  min.rs  scuttle.rs
